        untimely (IMAP4)
   - Bugfix/Cleanup: Simplified error handling when sending to the server
        (IMAP4)
   - Bugfix/Cleanup: Simplified error handling when reading server responses
        (IMAP4)
   - Bugfix/Cleanup: Simplified waiting for specified untagged server
        responses (IMAP4)
   - Don't stop idling when the server sends information and warning messages
        (IMAP4)
   - Source code for class Imap4 is fully documented now
   - Bugfix: Printing debug messages for sent lines (IMAP4 & POP3)
   - Feature: Allow the user to forbid idling (no GUI support ATM; IMAP4)
   - Added exception handling to POP3
   - Bugfix/Cleanup: Error handling when reading and sending (POP3)
   - Cleanup: Got rid of protocol specific code in class Socket
   - Bugfix: Corrected tests regarding socket status
   - Bugfix: Allow mail lines to begin with "-ERR" (POP3)
   - Bugfix: Don't treat "* BYE" messages by server as mailbox error when not
        checking for mail (IMAP4)
   - Bugfix/Cleanup of QUIT, STAT, UIDL commands (POP3)

Version 2.1.0
 * Nicolas Rougier
   - New & simpler interface
   - Support of the IDLE state for imap4 (no more polling)
   - Support of the FAM (File Alteration Monitor)
     (no more polling for file/folder protocols)
   - Better detection of mailbox format
   - Bugfix: IMAP4 idle state test to avoid checking twice
   - Bugfix: Popup was shown on exiting preferences
   - Put back credits
   - Updated French translations
   - Fix a bug with IMAP4 idle feature (not recognizing the BYE command)
   - Added a TODO file to keep track of features/bugs to be implemented/fixed
   - Bugfix: Testing of "\"text\" \"plain\"" in imap4 parsing was wrong
             (some servers answer using upper cases letter)
   - Modified credits apperance in the preferences panel (and remove the
     about menu from gnome applet popup menu)
   - Bugfix: socket was closed twice when lock was lost in IDLE state